[tool.poetry]
name = "advent-of-code24"
version = "0.1.0"
description = ""
authors = ["Josh Burt <joshuaburtphd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ipython = "^8.30.0"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
